logs/sam3d_5224102.err
  File "/dss/dsshome1/0D/ru47tac2/projects/segrap2025/SAM-Med3D/train.py", line 368
    return 0.0, 0.0, 0.0, []       
    ^
IndentationError: expected an indented block after 'if' statement on line 367
